<resources>
    <string name="app_name">All Messenger Access-Inbox</string>
    <string name="confirm_txt" translatable="false">By Get started you will agree with our Terms of Service and accept our Privacy policy</string>
    <string name="language">Language</string>

    <!--    test-->
    <string name="appId" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admobAppOpen" translatable="false">ca-app-pub-3940256099942544/3419835294
    </string>
    <string name="banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="intertial_id" translatable="false">ca-app-pub-3940256099942544/1033173712
    </string>
    <string name="native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admobNative" translatable="false">ca-app-pub-3940256099942544/2247696110</string>

    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="open_nav" translatable="false">Open Navigation Drawer</string>
    <string name="close_nav" translatable="false">Close Navigation Drawer</string>
    <string name="privacy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="apps">Edit Apps</string>
    <string name="rate">Rate Us</string>
    <string name="more">More apps</string>
    <string name="contact">Contact Us</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="star_to_give_us">Thank you for Ratings!!</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="Exit">Exit</string>
    <string name="sure_exit">Are You sure wants to Exit the App?</string>
    <string name="title_Later">Later</string>
    <string name="enjoying_the_app">Are enjoying app?</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="privacypolicy" translatable="false">https://www.privacypolicycenter.com/view.php?v=OS9pQmtWamlJQ212SzFMTml0eHdoQT09&amp;n=All-Messenger-Access-Inbox</string>
    <string name="submit">Submit</string>
    <string name="thanks_for_feedback">Thank you for Valuable Feedback!</string>
    <string name="Help">Help Us to Improve!!</string>
    <string name="hint">Write a Feedback</string>
    <string name="selectLanguage">Select language</string>
    <string name="appTheme">Theme</string>
    <string name="empty" />
    <string name="nodata">No data found!</string>

</resources>