<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back_arrow"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_toStartOf="@+id/done"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="@font/medium"
            android:padding="@dimen/_5sdp"
            android:text="@string/settings"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/done"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_tick"
            android:visibility="gone" />
    </RelativeLayout>
    <View
        android:visibility="gone"
        android:id="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/lightgrey"/>
    <LinearLayout
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/language"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_language"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@color/textcolor"
                android:fontFamily="@font/regular"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_margin="@dimen/_5sdp"
            android:id="@+id/appTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/mode"
                android:layout_gravity="center"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_light"/>

            <TextView
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/mode"

                android:layout_toStartOf="@+id/selectedTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appTheme"
                android:textColor="@color/textcolor"
                android:fontFamily="@font/regular"
                android:textSize="@dimen/_12sdp"
             />

            <TextView
                android:layout_marginEnd="@dimen/_15sdp"
                android:id="@+id/selectedTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/regular"
                android:paddingStart="@dimen/_5sdp"
                android:text="@string/language"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12sdp" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/arrow2"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_12sdp"
                android:padding="@dimen/_10sdp"
            />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/privacy_layout"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_privacy"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/textcolor"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rate_layout"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_rate"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/more_layout"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_apps"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/textcolor"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/share_layout"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_share"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/textcolor"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/contact_layout"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_contact"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/textcolor"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>