<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CustomTextView="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_segment_bg">

        <ImageView
            android:id="@+id/btn_later"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_close"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_16sdp">

            <ImageView
                android:id="@+id/imglogo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_125sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:src="@drawable/fifth"
                android:visibility="visible" />
            <androidx.appcompat.widget.AppCompatEditText
                android:visibility="gone"
                android:gravity="start"
                android:hint="@string/hint"
                android:id="@+id/feedbacktext"
                android:layout_width="match_parent"
                android:padding="@dimen/_5sdp"
                android:layout_height="@dimen/_125sdp"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/bg_feedback"
                android:layout_marginEnd="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/enjoying_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/enjoying_the_app"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/rate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/rate"
                android:textColor="@color/lightgrey"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible" />


            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/emoji_rating_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/Widget.MaterialRatingBar.RatingBar"
                android:layout_margin="@dimen/_8sdp"
                android:rating="5"
                android:stepSize="@integer/material_motion_duration_long_1"
                android:fontFamily="@font/medium" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_not_now"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/title_Later"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_13sdp"
                    />
                <TextView
                    android:id="@+id/btn_rate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/rate"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/green"
                    android:textSize="@dimen/_13sdp" />
                <TextView
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:gravity="center"
                    android:singleLine="true"
                    android:visibility="gone"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/green"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

